--- a/src/styles/appStyles.css
+++ b/src/styles/appStyles.css
@@ -1,3 +1,25 @@
-h2{
-    color: pink;
+.container{ 
+    margin-top: 100px;
+    padding: 5px;
+    
+}
+
+.container h2{
+    color: black; 
+
+    display: flex;
+    justify-content: center;     
+}
+
+.questions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.post {
+    margin: 8px;
+    padding: 10px;
+
+    border-radius: 4px;
 }
