--- a/src/styles/appStyles.css
+++ b/src/styles/appStyles.css
@@ -1,13 +1,15 @@
-.container{ 
-    
-    margin: 30px;
-    margin-top: 100px; 
+
+
+.container{  
+     
+    margin: 0 auto;
+    margin-top: 100px;
+    max-width: 1050px;
 
     padding: 30px;
  
     display: block;
     justify-content: center;  
-    border: solid;
     
 }
 
@@ -21,14 +23,33 @@
 .questions {
     display: flex;
     justify-content: center;  
-    border: solid;
+
+    
 }
 
 .post {
     margin: 8px;
-    padding: 25px;
+    padding: 5px;
 
     border-radius: 4px;
-    width: 30%;
-    border: solid;
+    width: 30%; 
+    height: 40px;
+}
+
+.input-button {   
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    color: #333;
+    padding: 25px;
+}
+
+.comment-area {   
+    background-color: rgba(255, 255, 255, 0.884);
+    border: 1px solid rgba(204, 204, 204, 0.753);
+    border-radius: 16px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    color: #333;
+    padding: 25px;
 }
