--- a/src/styles/appStyles.css
+++ b/src/styles/appStyles.css
@@ -17,7 +17,9 @@
     color: black; 
 
     display: flex;
-    justify-content: center;     
+    justify-content: center;  
+    
+    font-size: 32px;
 }
 
 .questions {
